# scale-ci-tripleo

./: .gitignore  README.md  ansible.cfg  deploy-scalelab.yaml  install-browbeat.yaml  install-browbeat.yml  install_browbeat.yaml  profile.yml  requirements-openshift-build.txt  requirements.txt  setup.cfg  update-cluster-motd.yaml  update-user.yaml
playbooks/: deploy-scalelab.yaml  scalelab-pci-passthrough.yaml
profiles/: main.yml  openshift-deploy.yml  openshift-small.yml  openshift-staging.yml
roles/install-browbeat/tasks/: main.yml
roles/overcloud-deploy/defaults/: main.yml
roles/overcloud-deploy/files/: pin.py
roles/overcloud-deploy/handlers/: main.yml
roles/overcloud-deploy/tasks/: main.yml
roles/overcloud-deploy/templates/: overcloud-deploy.sh.j2  pin-nodes.sh.j2
roles/overcloud-deploy/tests/: test.yml
roles/overcloud-deploy/vars/: main.yml
roles/overcloud-prepare-ssl/defaults/: main.yml
roles/overcloud-prepare-ssl/handlers/: main.yml
roles/overcloud-prepare-ssl/tasks/: main.yml
roles/overcloud-prepare-ssl/tests/: test.yml
roles/overcloud-prepare-ssl/vars/: main.yml
roles/overcloud-prepare-templates/defaults/: main.yml
roles/overcloud-prepare-templates/files/: 1029p-storage-environment.yaml  1029u-storage-environment.yaml  args.yaml  compute-params.yaml  controller-params.yaml  first-boot.yaml  network-environment.yaml  neutron-firewall.yaml  octavia-environment.yaml  roles_data-notelem.yaml  roles_data.yaml  (+1 more)
vars/: browbeat.yml  data.yml  deploy.yml  install-browbeat.yml  update-cluster-motd.yml  update-user.yml  update-users.yml
(+67 files in other folders)
