[metadata]
name = tripleo-quickstart-scalelab
summary = Bootstrapping scripts and playbooks for the Red Hat scalelab
description-file =
    README.md
author = Justin Kilpatrick
author-email = jkilpatr@redhat.com
home-page = http://docs.openstack.org/developer/tripleo-quickstart/
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    playbooks = playbooks/*
    usr/local/share/ansible/roles = roles/*
    profiles = profiles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
